View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029981 | Open CASCADE | OCCT:Coding | public | 2018-07-23 21:34 | 2018-07-30 10:20 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029981: Coding - Clang 6.0 warning [-Wenum-compare-switch] | ||||
Description | When compiling current master with Clang 6.0 (on Ubuntu 16.04), I got four compiler warnings: /home/abv/occt/src/BRepTest/BRepTest_SurfaceCommands.cxx:213:8: warning: comparison of two values with different enumeration types in switch statement ('BRepBuilderAPI_FaceError' and 'BRepLib_FaceError') [-Wenum-compare-switch] case BRepLib_ParametersOutOfRange: ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/abv/occt/src/BRepTest/BRepTest_SurfaceCommands.cxx:210:8: warning: comparison of two values with different enumeration types in switch statement ('BRepBuilderAPI_FaceError' and 'BRepLib_FaceError') [-Wenum-compare-switch] case BRepLib_CurveProjectionFailed: ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/abv/occt/src/BRepTest/BRepTest_SurfaceCommands.cxx:207:8: warning: comparison of two values with different enumeration types in switch statement ('BRepBuilderAPI_FaceError' and 'BRepLib_FaceError') [-Wenum-compare-switch] case BRepLib_NotPlanar: ^~~~~~~~~~~~~~~~~ /home/abv/occt/src/BRepTest/BRepTest_SurfaceCommands.cxx:204:8: warning: comparison of two values with different enumeration types in switch statement ('BRepBuilderAPI_FaceError' and 'BRepLib_FaceError') [-Wenum-compare-switch] case BRepLib_NoFace: ^~~~~~~~~~~~~~ | ||||
Steps To Reproduce | Build with Clang 6.0 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR29981 has been created by abv. SHA-1: 72099a8ea4711157b172291dd56d29a2d8b4c721 Detailed log of new commits: Author: abv Date: Mon Jul 23 21:58:47 2018 +0300 0029981: Coding - Clang 6.0 warning [-Wenum-compare-switch] |
|
Branch CR29981 has been updated forcibly by abv. SHA-1: 32f3495c6e623e7424a3e87fb472bc7c350f0de8 |
|
Fix is pushed to CR29981, please review. No testing is required because all the values of the enums used before and after the change (BRepLib_FaceError and BRepBuilderAPI_FaceError, respectively) are the same. |
|
Branch CR29981 has been deleted by inv. SHA-1: 32f3495c6e623e7424a3e87fb472bc7c350f0de8 |
occt: master 321659b0 2018-07-23 18:58:47
Committer: bugmaster Details Diff |
0029981: Coding - Clang 6.0 warning [-Wenum-compare-switch] In implementation of DRAW command "mkplane", the case labels of the switch statement are corrected to use values of the enum matching the type of the switch argument. |
Affected Issues 0029981 |
|
mod - src/BRepTest/BRepTest_SurfaceCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-07-23 21:34 |
|
New Issue | |
2018-07-23 21:34 |
|
Assigned To | => kgv |
2018-07-23 22:00 | git | Note Added: 0077947 | |
2018-07-23 22:09 | git | Note Added: 0077948 | |
2018-07-23 22:13 |
|
Note Added: 0077949 | |
2018-07-23 22:13 |
|
Status | new => resolved |
2018-07-23 22:15 | kgv | Assigned To | kgv => bugmaster |
2018-07-23 22:15 | kgv | Status | resolved => reviewed |
2018-07-24 18:48 | bugmaster | Status | reviewed => tested |
2018-07-28 12:26 | bugmaster | Changeset attached | => occt master 321659b0 |
2018-07-28 12:26 | bugmaster | Status | tested => verified |
2018-07-28 12:26 | bugmaster | Resolution | open => fixed |
2018-07-28 12:38 | git | Note Added: 0078136 | |
2018-07-30 10:20 | bugmaster | Test case number | => Not needed |