0029981: Coding - Clang 6.0 warning [-Wenum-compare-switch]

In implementation of DRAW command "mkplane", the case labels of the switch statement are corrected to use values of the enum matching the type of the switch argument.